Fix overflow in various parts of the application

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -8,6 +8,7 @@ $transition-collapse: none;
 
 html, body {
   height: 100%;
+  overflow-wrap: anywhere;
 }
 
 // Bootstrap Icons
